Mark refunded transactions in payuts table

--- a/src/styles/components/_table.scss
+++ b/src/styles/components/_table.scss
@@ -734,6 +734,12 @@
       justify-content: space-between;
     }
 
+    .PayoutsTransactionsView {
+      &.refunded {
+        color: #ff0000ab;
+      }
+    }
+
     &__cell {
       &.date {
         flex: 0 1 calc((100% - 118px) / 2);
