--- a/src/styles/_addPost.scss
+++ b/src/styles/_addPost.scss
@@ -823,14 +823,22 @@
   }
   &-form {
     display: flex;
-    flex-flow: row nowrap;
-    align-items: center;
+    flex-flow: row wrap;
+    // align-items: center;
   }
   .form-group_with-label {
     padding-right: 0;
     padding-bottom: 0;
     .form-group-inner {
       margin: 0;
+    }
+  }
+  .text {
+    width: 90%;
+    margin-bottom: 10px;
+    .label {
+      flex: 0 0 14.5%;
+      margin-right: 5px;
     }
   }
   .amount {
