--- a/src/styles/_stories.scss
+++ b/src/styles/_stories.scss
@@ -240,8 +240,7 @@
   }
 
   .storyView {
-    display: inline-flex;
-    margin-top: 0;
+
     @include media-breakpoint-down($desktop-breakpoint-dcrs) {
       display: inline-flex;
       margin-top: 0;
@@ -249,46 +248,39 @@
 
     &_top-live {
 
-        .story {
-        margin: 0 16px;
+      @include media-breakpoint-down($desktop-breakpoint-dcrs) {
+        padding: 9px 0 6px;
+        margin-left: -10px;
+        margin-right: 12px;
+      }
+    }
+
+    &.storyView_top-live__list.live-list-wrapper {
+      display: flex;
+      flex-flow: row nowrap;
+      width: auto;
+      .story {
+        margin-right: 24px;
+        margin-left: 10px;
         @include media-breakpoint-down($desktop-breakpoint-dcrs) {
           margin: 0 12px;
         }
       }
 
-      // @include media-breakpoint-down($desktop-breakpoint-dcrs) {
-      //   padding: 9px 0 6px;
-      //   margin-left: -10px;
-      //   margin-right: 12px;
-      // }
+      @include media-breakpoint-up($desktop-breakpoint) {
+        width: auto;
+        min-width: 82px;
+        margin-right: 0px;
+        margin-top: 5px;
+      }
     }
-
-    // &.storyView_top-live__list.live-list-wrapper {
-    //   display: flex;
-    //   flex-flow: row nowrap;
-    //   width: auto;
-    //   .story {
-    //     margin-right: 24px;
-    //     margin-left: 10px;
-    //     @include media-breakpoint-down($desktop-breakpoint-dcrs) {
-    //       margin: 0 12px;
-    //     }
-    //   }
-
-    //   @include media-breakpoint-up($desktop-breakpoint) {
-    //     width: auto;
-    //     min-width: 82px;
-    //     margin-right: 0px;
-    //     margin-top: 5px;
-    //   }
-    // }
 
     .stories-all & {
 
       @include media-breakpoint-up($desktop-breakpoint) {
-        // width: 82px;
-        // min-width: 82px;
-        // margin-right: 24px;
+        width: 82px;
+        min-width: 82px;
+        margin-right: 24px;
         margin-top: 5px;
       }
     }
@@ -324,8 +316,6 @@
     flex-direction: column;
     color: $main-color;
 
-    margin: 0 12px;
-    padding: 0;
     @include media-breakpoint-down($desktop-breakpoint-dcrs) {
       margin: 0 12px;
       padding: 0;
