Revert "Fix separate lives"
This reverts commit 5cf274c4b9a429af14ab9d698f03afa3c1f8675e.

--- a/src/styles/_stories.scss
+++ b/src/styles/_stories.scss
@@ -240,22 +240,18 @@
   }
 
   .storyView {
-    margin-top: 0;
 
-    &_top-live {
-        .story {
-        margin: 0 16px;
-      }
+    @include media-breakpoint-down($desktop-breakpoint-dcrs) {
+      display: inline-flex;
+      margin-top: 0;
     }
 
-    &.storyView_top-live__list.live-list-wrapper {
-      display: inline-flex;
+    &_top-live {
 
-      @include media-breakpoint-up($desktop-breakpoint) {
-        width: auto;
-        min-width: auto;
-        margin-right: 10px;
-        margin-top: 5px;
+      @include media-breakpoint-down($desktop-breakpoint-dcrs) {
+        padding: 9px 0 6px;
+        margin-left: -10px;
+        margin-right: 12px;
       }
     }
 
@@ -300,8 +296,6 @@
     flex-direction: column;
     color: $main-color;
 
-    // margin: 0 12px;
-    padding: 0;
     @include media-breakpoint-down($desktop-breakpoint-dcrs) {
       margin: 0 12px;
       padding: 0;
