Fix verified icon color on profile header

--- a/src/styles/_profile.scss
+++ b/src/styles/_profile.scss
@@ -1232,7 +1232,9 @@
       }
 
       .verified-user {
-        color: $secondary-color;
+        &.fullyMonetized {
+          color: $secondary-color;
+        }
       }
 
       .icn-block {
