--- a/src/styles/_addPost.scss
+++ b/src/styles/_addPost.scss
@@ -834,6 +834,7 @@
     }
   }
   .text {
+    order: 1;
     width: 90%;
     margin-bottom: 10px;
     .label {
@@ -843,11 +844,14 @@
   }
   .amount {
     width: 30%;
+    order: 3
   }
   .sources {
     width: 60%;
+    order: 4
   }
   .close-tipsGoal {
+    order: 2;
     width: 10%;
     margin-bottom: 10px;
   }
@@ -858,6 +862,7 @@
       .close-tipsGoal {
         transform: translateY(7px);
         margin-bottom: 0;
+        order: 0;
       }
       .amount {
         margin-right: auto;
