--- a/src/styles/_settings.scss
+++ b/src/styles/_settings.scss
@@ -413,3 +413,47 @@ button.balance-info {
     }
   }
 }
+.emailNotificationsTypes {
+  .form-group-inner {
+    .inner {
+      display: flex;
+      flex-flow: row nowrap;
+      margin-left: auto;
+      &.disabled {
+        opacity: 0.5;
+      }
+      .label {
+        line-height: 24px;
+        margin-right: 10px;
+      }
+    }
+  }
+}
+
+.twitterCusomPreviews {
+  width: 100%;
+  height: 250px;
+  position: relative;
+  margin-bottom: 10px;
+  .viewMode {
+    width: 250px;
+    height: 250px;
+    margin: 0 auto;
+    .media {
+      width: 250px;
+      height: 250px;
+      .swiper-container {
+        .media-wrapper {
+          img {
+            width: 250px;
+            height: 250px;
+            object-fit: cover;
+          }
+        }
+      }
+    }
+    .loader-container {
+      display: none;
+    }
+  }
+}
