--- a/src/styles/_post.scss
+++ b/src/styles/_post.scss
@@ -598,7 +598,7 @@
       border-radius: 4px;
       position: relative;
       &__bar {
-        height: 6px;
+        height: 100%;
         background-color: $secondary-color;
         border-radius: 3px;
       }
