--- a/src/styles/_post.scss
+++ b/src/styles/_post.scss
@@ -591,7 +591,7 @@
     height: auto;
 
     .progress-line {
-      border: 1px solid $secondary-color;
+      box-shadow: 0 0 0 1px  $secondary-color inset;
       margin: 0 5px;
       flex-grow: 1;
       height: 8px;
