--- a/src/styles/_settings.scss
+++ b/src/styles/_settings.scss
@@ -432,9 +432,24 @@ button.balance-info {
 
 .twitterCusomPreviews {
   width: 100%;
-  height: 250px;
+  // height: 250px;
+  height: auto;
   position: relative;
-  margin-bottom: 10px;
+  margin-bottom: 30px;
+  cursor: pointer;
+  .modeSwitcher {
+    position: absolute;
+    top: 0;
+    right: 0;
+    color: $secondary-color;
+  }
+  .editMode {
+    padding-top: 20px;
+    .previews {
+      display: flex;
+      flex-flow: row wrap;
+    }
+  }
   .viewMode {
     width: 250px;
     height: 250px;
@@ -455,5 +470,11 @@ button.balance-info {
     .loader-container {
       display: none;
     }
+  }
+  .upload {
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: center;
+    justify-content: space-between;
   }
 }
