--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -971,6 +971,7 @@ button {
   transition: color 0.3s ease;
 
   @include media-breakpoint-up($desktop-breakpoint) {
+    margin-left: -2px;
 
     &:hover {
       color: $secondary-color-darken;
