--- a/src/styles/team.scss
+++ b/src/styles/team.scss
@@ -2,12 +2,12 @@
 
 @font-face {
   font-family: 'team';
-  src: url('#{$assetPath}/fonts/team/team.eot?30693761');
-  src: url('#{$assetPath}/fonts/team/team.eot?30693761#iefix') format('embedded-opentype'),
-       url('#{$assetPath}/fonts/team/team.woff2?30693761') format('woff2'),
-       url('#{$assetPath}/fonts/team/team.woff?30693761') format('woff'),
-       url('#{$assetPath}/fonts/team/team.ttf?30693761') format('truetype'),
-       url('#{$assetPath}/fonts/team/team.svg?30693761#team') format('svg');
+  src: url('#{$assetPath}/fonts/team/team.eot?30693762');
+  src: url('#{$assetPath}/fonts/team/team.eot?30693762#iefix') format('embedded-opentype'),
+       url('#{$assetPath}/fonts/team/team.woff2?30693762') format('woff2'),
+       url('#{$assetPath}/fonts/team/team.woff?30693762') format('woff'),
+       url('#{$assetPath}/fonts/team/team.ttf?30693762') format('truetype'),
+       url('#{$assetPath}/fonts/team/team.svg?30693762#team') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -144,3 +144,4 @@
 .icon-i76:before { content: '\e656'; } /* '' */
 .icon-link:before { content: '\e800'; } /* '' */
 .icon-retweet:before { content: '\e801'; } /* '' */
+.icon-gplus:before { content: '\f0d5'; } /* '' */
