Connect google account to existed profile

--- a/src/styles/_settings.scss
+++ b/src/styles/_settings.scss
@@ -148,6 +148,13 @@
       }
     }
 
+    .GoogleView & {
+
+      @include media-breakpoint-down($desktop-breakpoint-dcrs) {
+        display: none;
+      }
+    }
+
     .btn-logout {
 
       &:after {
