--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -59,6 +59,7 @@
 @import "obs";
 @import "links";
 @import "contest";
+@import "contestSettings";
 @import "magazine";
 @import "subscribersMessages";
 
