Add edit and delete group options

--- a/src/styles/_usersGroups.scss
+++ b/src/styles/_usersGroups.scss
@@ -57,6 +57,13 @@
       &-joinGroupContainer {
         margin-top: auto;
       }
+      &-editButton {
+        position: absolute;
+        top: 25px;
+        right: 25px;
+        color: $secondary-color;
+        cursor: pointer;
+      }
     }
   }
 
