Fix vote button position

--- a/src/styles/components/_editMedia.scss
+++ b/src/styles/components/_editMedia.scss
@@ -11,6 +11,10 @@
   margin-left: auto;
 }
 
+.mt-auto {
+  margin-top: auto;
+}
+
 .textarea__title {
   flex: 0 0 calc(100% - 45px);
   margin-bottom: 10px;
