--- a/src/styles/_contestSettings.scss
+++ b/src/styles/_contestSettings.scss
@@ -1,11 +1,37 @@
 .contest-settings {
-  .info {
+  .contest-table {
     width: 100%;
-    border-collapse: collapse;
-    tbody {
-      border-bottom: 1px solid rgba($gray, 0.2);
+
+    &-head {
+      div {
+        font-weight: bold;
+      }
     }
-    td, th {
+    &-body {
+      @include media-breakpoint-down($desktop-breakpoint) {
+        &.border-top {
+          border-top: 1px solid rgba(124, 139, 150, 0.2);
+          padding-top: 24px;
+        }
+      }
+    }
+    &-row {
+      display: flex;
+      flex-flow: row nowrap;
+      align-items: center;
+
+      .contest-row-name {
+        width: 70%;
+      }
+      .contest-row-rank {
+        width: 10%;
+      }
+      .contest-row-toggler {
+        width: 20%;
+      }
+    }
+    td,
+    th {
       padding: 3px;
     }
     td {
@@ -30,7 +56,8 @@
     margin-bottom: 15px;
     table {
       background-color: $primary-color-06;
-      td, th {
+      td,
+      th {
         padding: 5px 10px;
       }
     }
@@ -51,6 +78,55 @@
     margin-bottom: 15px;
     .label {
       min-width: 150px;
+      display: inline;
+      line-height: 30px;
+      @include media-breakpoint-down($desktop-breakpoint) {
+        word-break: break-all;
+        line-height: 30px;
+      }
+    }
+    .copy-link {
+      @include media-breakpoint-down($desktop-breakpoint) {
+        // width: 100%;
+      }
+    }
+  }
+
+  .contestImagePreview {
+    padding-right: 11.5%;
+    @include media-breakpoint-down($desktop-breakpoint) {
+      padding-right: 0;
+    }
+    img {
+      width: 287px;
+      height: 278px;
+      object-fit: cover;
+      display: block;
+      margin: 10px 0 10px auto;
+      @include media-breakpoint-down($desktop-breakpoint) {
+        margin: auto
+      }
+    }
+    &.full-width {
+      padding-right: 0;
+      img {
+        width: 100%;
+      }
+    }
+  }
+  .twitter-input {
+    margin-right: 20px;
+    @include media-breakpoint-down($desktop-breakpoint) {
+      margin-left: 20px;
+    }
+  }
+  .twitterConnect {
+    align-items: center;
+  }
+
+  .toggle-element {
+    @include media-breakpoint-down($desktop-breakpoint-dcrs) {
+      margin-top: 0;
     }
   }
 }
