--- a/src/styles/_contest.scss
+++ b/src/styles/_contest.scss
@@ -57,6 +57,8 @@
     }
     .profile-text {
       margin-bottom: 15px;
+      margin-top: 10px;
+      font-size: 11px;
     }
     .more-functions {
       position: absolute;
