--- a/src/styles/_stories.scss
+++ b/src/styles/_stories.scss
@@ -132,6 +132,7 @@
 
       @include media-breakpoint-down($desktop-breakpoint-dcrs) {
         white-space: nowrap;
+        display: flex;
       }
     }
   }
