Fix nominee iphone image resizing on android

--- a/src/styles/_contest.scss
+++ b/src/styles/_contest.scss
@@ -55,6 +55,7 @@
       background-size: cover;
       background-position: center;
       background-color: rgba($gray, 0.1);
+      background-repeat: no-repeat;
     }
     .profile-text {
       margin-bottom: 15px;
