--- a/src/styles/_contestSettings.scss
+++ b/src/styles/_contestSettings.scss
@@ -102,10 +102,12 @@
     @include media-breakpoint-down($desktop-breakpoint) {
       padding-right: 0;
     }
-    img {
+    .image {
       width: 287px;
       height: 278px;
-      object-fit: cover;
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
       display: block;
       margin: 10px 0 10px auto;
       @include media-breakpoint-down($desktop-breakpoint) {
@@ -114,7 +116,7 @@
     }
     &.full-width {
       padding-right: 0;
-      img {
+      .image {
         width: 100%;
       }
     }
