Hide group functionality for 1-st version (without buy members) and connect to BE

--- a/src/styles/_usersGroups.scss
+++ b/src/styles/_usersGroups.scss
@@ -112,11 +112,9 @@
         }
         @include media-breakpoint-down($desktop-breakpoint) {
           margin-top: 20px;
+          margin-right: 10px;
         }
         .actions__btn {
-          @include media-breakpoint-down($desktop-breakpoint) {
-            margin-left: 10px;
-          }
           cursor: pointer;
           &.hover-highlight {
             &:hover {
