--- a/src/styles/_users.scss
+++ b/src/styles/_users.scss
@@ -414,5 +414,13 @@
 
   &__text {
     opacity: .6;
+    display: flex;
+    flex-flow: column nowrap;
+    align-items: center;
+    .prize {
+      align-items: center;
+      font-size: 16px;
+      margin-top: 10px;
+    }
   }
 }
