--- a/src/styles/_contest.scss
+++ b/src/styles/_contest.scss
@@ -107,13 +107,58 @@
       display: inline-block;
     }
   }
+  .form-group_with-label {
+    &.contest-select {
+      padding: 0;
+      .form-group-inner {
+        .label {
+          flex: 1 1 50%;
+          margin-right: 10px;
+        }
+        .row {
+          flex: 0 0 100%;
+          margin-left: 10px;
+          @include media-breakpoint-down($desktop-breakpoint) {
+            flex: 1 1 100%;
+          }
+          .row-select {
+            @include media-breakpoint-down($desktop-breakpoint) {
+              flex: 1 1 100%;
+            }
+          }
+        }
+      }
+      &-group {
+        flex: 0 0 50%;
+        margin-right: auto;
+        @include media-breakpoint-down($desktop-breakpoint) {
+          flex: 1 1 100%;
+        }
+        label {
+          white-space: nowrap;
+        }
+      }
+      &-groupItem {
+        @include media-breakpoint-down($desktop-breakpoint) {
+          flex: 1 1 100%;
+        }
+      }
+    }
+  }
+  .contest-select-wrapper {
+    margin: 5px 13px;
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: center;
+    justify-content: space-between;
+    @include media-breakpoint-down($desktop-breakpoint) {
+      flex-flow: row wrap;
+    }
+  }
 }
 .contest-header {
   margin: 0 0 20px;
   img {
     width: 100%;
   }
-}
-
-.ContestsCollectionView {
 }
