--- a/src/styles/_contest.scss
+++ b/src/styles/_contest.scss
@@ -1,3 +1,5 @@
+@import "components/imports";
+
 @include media-breakpoint-up($desktop-breakpoint) {
   .popup-container.popup-contest-voting {
     max-width: 429px;
@@ -26,8 +28,9 @@
     }
     a {
       margin: 3px 20px;
+      opacity: 0.5;
       &.selected {
-        opacity: 0.5;
+        opacity: 1;
       }
     }
     span {
@@ -111,6 +114,7 @@
     &.contest-select {
       padding: 0;
       .form-group-inner {
+        margin-bottom: 0;
         .label {
           flex: 1 1 50%;
           margin-right: 10px;
@@ -146,13 +150,41 @@
     }
   }
   .contest-select-wrapper {
-    margin: 5px 13px;
+    margin: 10px 0 15px 0;
     display: flex;
     flex-flow: row nowrap;
     align-items: center;
     justify-content: space-between;
+    min-height: 30px;
     @include media-breakpoint-down($desktop-breakpoint) {
       flex-flow: row wrap;
+    }
+
+    .contest-group {
+      display: flex;
+      align-items: center;
+      @include media-breakpoint-down($desktop-breakpoint) {
+        margin-bottom: 15px;
+      }
+      &-name {
+        font-size: 18px; 
+        margin: 0 20px;
+        cursor: pointer;
+        color: $secondary-color;
+        opacity: 0.5;
+        @include media-breakpoint-down($desktop-breakpoint) {
+          font-size: 15px;
+        }
+        &.selected {
+          opacity: 1;
+        }
+
+      }
+      &-divider {
+        &:last-child {
+          display: none;
+        }
+      }
     }
   }
 }
