--- a/src/styles/_usersGroups.scss
+++ b/src/styles/_usersGroups.scss
@@ -89,13 +89,17 @@
           display: flex;
           align-items: center;
           @include media-breakpoint-down($desktop-breakpoint) {
-            justify-content: space-between;
+            flex-flow: column nowrap;
+            align-items: flex-start;
           }
 
           &__btn {
             display: flex;
             align-items: center;
-            margin-left: 20px;
+            margin-left: 15px;
+            @include media-breakpoint-down($desktop-breakpoint) {
+              margin: 5px 20px;
+            }
           }
         }
         .delete-card {
