--- a/src/styles/components/_popup.scss
+++ b/src/styles/components/_popup.scss
@@ -369,7 +369,7 @@
   &.popup-massmes {
 
     @include media-breakpoint-down($desktop-breakpoint-dcrs) {
-      position: fixed;
+      position: absolute;
       left: 50%;
       top: 50%;
       transform: translate(-50%, -50%);
