--- a/src/styles/components/_popup.scss
+++ b/src/styles/components/_popup.scss
@@ -369,7 +369,7 @@
   &.popup-massmes {
 
     @include media-breakpoint-down($desktop-breakpoint-dcrs) {
-      position: absolute;
+      position: fixed;
       left: 50%;
       top: 50%;
       transform: translate(-50%, -50%);
@@ -384,6 +384,7 @@
   &.popup-massmes {
 
     @include media-breakpoint-down($desktop-breakpoint-dcrs) {
+      position: absolute;
       margin-left: 20px;
       margin-right: 20px;
       max-width: calc(100% - 40px);
