Add unlock text message in payed messages with media

--- a/src/styles/_chatMessages.scss
+++ b/src/styles/_chatMessages.scss
@@ -554,11 +554,18 @@
   }
 
   .media,
-  .message,
   .video-placeholder {
 
     &:before {
       content: "\E61B";
+    }
+  }
+
+  .message {
+    &.message-locked {
+      &:before {
+        content: "\E61B";
+      }
     }
   }
 
