--- a/src/styles/_addChatMessage.scss
+++ b/src/styles/_addChatMessage.scss
@@ -22,6 +22,18 @@
      pointer-events: none;
      opacity: .7;
    }
+
+   .freeText-switcher {
+     display: flex;
+     flex-flow: row nowrap;
+     align-items: center;
+     margin: 0 auto 10px 3px;
+
+     .label {
+      margin-right: 10px;
+      opacity: 0.5;
+     }
+   }
 }
 
 .chatForm {
