Show photo preview always with horizontal scroll on mobile screen

--- a/src/styles/components/_fileUploader.scss
+++ b/src/styles/components/_fileUploader.scss
@@ -3,9 +3,10 @@
   display: flex;
   flex-wrap: nowrap;
   position: relative;
-
-  @include media-breakpoint-down($tablet-breakpoint-dcrs) {
-    flex-wrap: wrap;
+  &.postFileCollectionView {
+    @include media-breakpoint-down($tablet-breakpoint-dcrs) {
+      flex-wrap: wrap;
+    }
   }
 }
 
