--- a/src/styles/_usersGroups.scss
+++ b/src/styles/_usersGroups.scss
@@ -54,7 +54,8 @@
 
   &-header {
     width: 100%;
-    height: 250px;
+    min-height: 250px;
+    // height: 250px;
     display: flex;
     @include media-breakpoint-down($desktop-breakpoint) {
       flex-flow: column nowrap;
@@ -153,6 +154,37 @@
         right: 25px;
         color: $secondary-color;
         cursor: pointer;
+      }
+    }
+    .header-content {
+      &-media {
+        padding: 30px 0 10px 0;
+        width: 100%;
+        .title {
+          text-align: center;
+        }
+
+        &-list {
+          padding-top: 10px;
+          display: flex;
+          flex-flow: row wrap;
+
+          &-item {
+            flex: 0 0 100px;
+            display: flex;
+            flex-flow: column nowrap;
+            align-items: center;
+            padding: 0 10px;
+            .media-preview-image {
+              width: 100px;
+              height: 100px;
+              border-radius: 5px;
+            }
+            .media-preview-title {
+              font-size: 12px;
+            }
+          }
+        }
       }
     }
   }
