--- a/src/styles/_statistics.scss
+++ b/src/styles/_statistics.scss
@@ -291,6 +291,11 @@
   }
 }
 
+#followers_scale.statistics-chart-scale {
+  padding-left: 0px;
+  padding-right: 0px;
+}
+
 .amcharts-main-div {
   position: relative;
 }
