--- a/src/styles/_statistics.scss
+++ b/src/styles/_statistics.scss
@@ -284,23 +284,23 @@
   justify-content: space-between;
   font-size: 10px;
   color: #7c8b96;
-  padding: 11px 0 19px 0;
+  padding: 11px 10px 19px 10px;
 
-  &__item {
-    // flex: 0 1 100%;
-    &:first-child {
-      padding-left: 5px;
-    }
-    &:last-child {
-      padding-right: 5px;
-    }
-    text-align: center;
-  }
+  //&__item {
+  //  // flex: 0 1 100%;
+  //  &:first-child {
+  //    padding-left: 5px;
+  //  }
+  //  &:last-child {
+  //    padding-right: 5px;
+  //  }
+  //  text-align: center;
+  //}
 }
 
-#followers_scale.statistics-chart-scale {
-  padding-left: 0;
-  padding-right: 0;
+#earnings_scale.statistics-chart-scale {
+  padding-left: 15px;
+  padding-right: 17px;
 }
 
 .amcharts-main-div {
