Scheduled clip release option

--- a/src/styles/_addPost.scss
+++ b/src/styles/_addPost.scss
@@ -1092,7 +1092,7 @@
   .vdatetime-popup {
 
     &:before {
-      content: "Schedule post";
+      content: "Schedule";
       font-weight: 500;
       display: block;
       padding: 20px 20px 3px;
