--- a/src/styles/components/_general.scss
+++ b/src/styles/components/_general.scss
@@ -649,6 +649,17 @@ video {
   opacity: .5;
 }
 
+.badge {
+  color: $white;
+  font-size: 12px;
+  line-height: 12px;
+  min-width: 18px;
+  display: inline-block;
+  background-color: $primary-color;
+  padding: 3px;
+  border-radius: 1000px;
+}
+
 .timestamp {
   padding: 0;
   font-size: 13px;
