Fixes for stat followers block

--- a/src/styles/_statistics.scss
+++ b/src/styles/_statistics.scss
@@ -66,6 +66,12 @@
     font-size: 11px;
     color: #7c8b96;
   }
+
+  .no-items {
+    font-size: 11px;
+    color: #7c8b96;
+    margin-top: 10px;
+  }
 }
 
 .charts-data {
