Add report spam feature to requested chats

--- a/src/styles/_chatMessages.scss
+++ b/src/styles/_chatMessages.scss
@@ -102,6 +102,14 @@
       button {
         margin-bottom: 10px;
       }
+
+      .info-message{
+        font-size: 14px;
+        opacity: 0.5;
+        margin-top: -8px;
+        margin-bottom: 15px;
+      }
+
     }
   }
 }
