--- a/src/styles/_statistics.scss
+++ b/src/styles/_statistics.scss
@@ -560,9 +560,16 @@
     height: 200px;
     .table {
       margin-bottom: 0;
+      border-spacing: 0;
     }
-    td {
+    td, .date-item {
       font-size: 12px;
+    }
+    .table_dotts-line {
+      th, td {
+        padding-left: 1px;
+        padding-right: 1px;
+      }
     }
   }
 }
