--- a/src/styles/_chatAttachments.scss
+++ b/src/styles/_chatAttachments.scss
@@ -28,7 +28,7 @@
 
     .media {
       width: 100%;
-      position:  absolute;
+      position: absolute;
       top: 0;
       left: 0;
       bottom: 0;
@@ -97,6 +97,76 @@
       position: absolute;
       left: 140px;
       top: 1px;
+    }
+  }
+
+  .massMessagesHistoryModal {
+    .popup-addPost__header {
+      z-index: 2;
+      padding-bottom: 15px;
+    }
+    .messages__list {
+      width: 100%;
+      margin-left: auto;
+      height: 100%;
+      overflow-y: auto;
+      padding: 60px 10px 10px 10px;
+      .chatMessageHistoryItem {
+        display: flex;
+        flex-flow: row nowrap;
+        padding: 50px 0;
+        border-bottom: 1px solid rgba(0,0,0, .2);
+        @include media-breakpoint-down($mobile-breakpoint) {
+          flex-flow: column nowrap;
+        }
+        .chatMessage {
+          max-width: 380px;
+          @include media-breakpoint-down($mobile-breakpoint) {
+            max-width: 100%;
+          }
+          .media-chat  {
+            @include media-breakpoint-up($mobile-breakpoint) {
+              width: 380px;
+              margin-left: auto;
+            }
+          }
+        }
+        &:last-child {
+          border-bottom: none;
+        }
+
+        &__info {
+          flex-grow: 1;
+          display: flex;
+          flex-flow: column nowrap;
+          align-items: center;
+          justify-content: center;
+          @include media-breakpoint-down($mobile-breakpoint) {
+            width: 100%;
+            order: 1;
+            margin-top: 20px;
+          }
+          &-text {
+            margin-bottom: 20px;
+            text-align: center;
+            font-size: 15px;
+            @include media-breakpoint-down($desktop-breakpoint-dcrs) {
+              font-size: 14px;
+            }
+            .bold.alt {
+              font-weight: bold;
+              color: $default-secondary-color;
+            }
+          }
+        }
+        .non-semi-transparent {
+          opacity: 1;
+        }
+        .media-item {
+            // max-width: 100%;
+            // margin: auto;
+        }
+      }
     }
   }
 }
