--- a/src/styles/_contestSettings.scss
+++ b/src/styles/_contestSettings.scss
@@ -42,6 +42,12 @@
         color: black;
       }
     }
+    &-winnerInfo {
+      text-align: center;
+      padding: 20px;
+      padding-bottom: 0;
+      color: $secondary-color;
+    }
     &-details {
       .finished-title {
         margin-top: 10px;
